samples/_failures_safe/1761043492_7f1e4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5edd92ce.c:157:1: error: expected identifier or ‘(’ at end of input
  157 | int
      | ^~~
